--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,32 @@ body {
 
 }
 
+.wrapper_full {
+    max-width: 1262px;
+    margin: 0 auto;
+}
+
+.section-title {
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 42px;
+    position: relative;
+    padding-bottom: 10px;
+    /* color: #102746; */
+}
+
+.section-title::after {
+    display: block;
+    content: '';
+    width: 253px;
+    height: 3px;
+    background-color: #006DFE;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+
 .img {
     max-width: 100%;
     height: auto;
@@ -685,10 +711,12 @@ body {
 
 .benefits_wrap {
     max-width: 1262px;
+    /* height: 30vh; */
     background-color: #fff;
     margin: 0 auto;
     box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
     position: relative;
+
 
 }
 
@@ -708,17 +736,17 @@ body {
 
 .benefits_cards {
     display: grid;
-    /* height: 30vh; */
     grid-template-columns: repeat(3, 1fr);
     column-gap: 55px;
     padding: 0 100px;
+
 
 
 }
 
 .benefits_card {
     grid-column: span 1;
-    margin-bottom: 112px;
+    margin-bottom: 100px;
 }
 
 .benefits_class-pic {
@@ -753,15 +781,52 @@ body {
     font-size: 16px;
     line-height: 24px;
     text-decoration: none;
-    background: url(../img/svg/arrow\ right.svg) no-repeat 95%  center;
+    background: url(../img/svg/arrow\ right.svg) no-repeat 95% center;
     background-size: auto;
     color: #006DFE;
     transition: .2s all;
 }
 
-.benefits_card_more:hover, .benefits_card_more:focus {
-    background: url(../img/svg/arrow\ right.svg) no-repeat right  center;
+.benefits_card_more:hover,
+.benefits_card_more:focus {
+    background: url(../img/svg/arrow\ right.svg) no-repeat right center;
 }
 
 
 /* benefits_styles end */
+
+/* places styles start */
+
+
+.places_caption {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 36px;
+}
+
+.places_title {
+    margin-right: 15px;
+}
+
+
+.places_view-all {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #006DFE;
+    text-decoration: none;
+    background: url(../img/svg/arrow\ right.svg) no-repeat right center;
+    padding-right: 59px;
+   
+}
+
+.places_view-all:hover, .places_view-all:focus  {
+    opacity: .65;
+}
+    
+
+
+
+/* places styles end */
