--- a/css/style.css
+++ b/css/style.css
@@ -506,16 +506,17 @@ textarea {
 /* 
   MARGIN RESET */
 
+
 html {
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
     -webkit-box-sizing: inherit;
-            box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
@@ -524,15 +525,18 @@ body {
     font-size: 16px;
     line-height: 1.2;
     font-weight: normal;
-    color: #102746
+    color: #102746;
 }
 
-/* WRAPPER */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .wrapper {
     max-width: 1060px;
     margin: 0 auto;
     padding: 0 15px;
-
 }
 
 .wrapper_full {
@@ -547,7 +551,6 @@ body {
     line-height: 42px;
     position: relative;
     padding-bottom: 10px;
-    /* color: #102746; */
 }
 
 .section-title::after {
@@ -561,12 +564,6 @@ body {
     left: 0;
 }
 
-
-.img {
-    max-width: 100%;
-    height: auto;
-}
-
 /* HEADER */
 /* header styles start */
 .header {
@@ -577,11 +574,12 @@ body {
     transition: 0.3s linear;
     padding-bottom: 20px;
     z-index: 999;
+    margin: 0 auto;
 }
 
 .header_active {
     background: #0E1D28;
-    
+
 }
 
 .header_wrapper {
@@ -590,7 +588,10 @@ body {
     align-items: flex-end;
     justify-content: space-between;
     padding-top: 56px;
-} 
+    margin: 0 auto;
+
+
+}
 
 /* NAV */
 
@@ -624,6 +625,7 @@ body {
     opacity: .75;
 
 }
+
 .header_burger {
     display: none;
     position: relative;
@@ -664,6 +666,7 @@ body {
     background-size: cover;
     padding-top: 263px;
     padding-bottom: 390px;
+    margin: 0 auto;
 
 
 
@@ -701,7 +704,7 @@ body {
 
 .search-form_field {
     width: 297px;
-    background: transparent url(../img/svg/circle-icon.svg) no-repeat left 13px;
+    background: transparent url(../img/svg/circle-icon.svg) no-repeat left 5px;
     background-size: 18px;
     border: 0;
     border-bottom: solid 2px #BFC0C5;
@@ -712,6 +715,7 @@ body {
     font-size: 18px;
     color: #FFFFFF;
 }
+
 
 
 .search-form_field::placeholder {
@@ -751,7 +755,6 @@ body {
 
 .benefits_wrap {
     max-width: 1262px;
-    /* height: 30vh; */
     background-color: #fff;
     margin: 0 auto;
     box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
@@ -779,19 +782,16 @@ body {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 55px;
     padding: 0 100px;
-
-
-
 }
 
 .benefits_card {
     grid-column: span 1;
     margin-bottom: 100px;
+
 }
 
-.benefits_class-pic {
+.benefits_card-pic {
     min-width: 66px;
-    max-height: 58px;
     margin-bottom: 37px;
 }
 
@@ -804,6 +804,7 @@ body {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 26px;
+
 }
 
 .benefits_card-description {
@@ -815,7 +816,7 @@ body {
 }
 
 .benefits_card_more {
-    display: inline block;
+    display: inline-block;
     padding-right: 59px;
     font-weight: normal;
     font-size: 16px;
@@ -877,7 +878,8 @@ body {
 .places_cards {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-gap: 10px;
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 .places_card {
@@ -949,26 +951,17 @@ body {
     margin-bottom: 139px;
 }
 
-.wrapper_full {}
-
 .tours_tour {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0 108px;
     align-items: center;
-
-
 }
 
 .tour {
     margin-bottom: 77px;
 }
 
-.tour_pic {}
-
-.tour_thumb {}
-
-.tour_info {}
 
 .tour_title {
     font-weight: 500;
@@ -1018,12 +1011,14 @@ body {
 .top_card {
     display: flex;
     flex-direction: column;
+    grid-column: span 2;
 }
 
 .top_cards {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 57px;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 57px;
+    row-gap: 57px;
     align-items: center;
 }
 
@@ -1116,7 +1111,6 @@ body {
     position: relative;
     max-width: 1440px;
     margin: 0 auto;
-
 }
 
 .video_item {
@@ -1130,7 +1124,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 /* <!-- Videos end -->  */
@@ -1183,6 +1177,277 @@ body {
 }
 
 
-
-
 /* Footer styles end */
+
+/* Media start */
+@media screen and (max-width: 960px) {
+
+    .benefits {
+        margin-bottom: 75px;
+    }
+
+    .benefits_card {
+        margin-bottom: 60px;
+    }
+
+    .search-form_field {
+        margin-bottom: 25px;
+    }
+
+    .benefits_cards {
+        padding: 0 15px;
+        column-gap: 35px;
+    }
+
+    .benefits_card-title {
+        padding: 0;
+    }
+
+    .benefits_wrap {
+        box-shadow: none;
+    }
+
+    .places_card_size_lg {
+        grid-column: span 6;
+    }
+
+    .places_card_size_sm {
+        grid-column: span 6;
+    }
+
+    .top_cards {
+        row-gap: 55px;
+    }
+
+    .top_card {
+        grid-column: span 3;
+    }
+
+    .footer {
+        padding: 60px 0;
+    }
+
+    .top_card-pic {
+        margin-bottom: 25px;
+    }
+
+}
+
+@media screen and (max-width: 767px) {
+
+    .section-title {
+        margin-bottom: 20px;
+    }
+
+
+    .header_burger {
+        display: block;
+    }
+
+    .header_nav {
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: #000000;
+        position: fixed;
+        z-index: 10;
+        padding: 75px;
+        transform: translateX(100%);
+        transition: .2s all linear;
+
+    }
+
+    .header_nav_active {
+        transform: translateX(0);
+    }
+
+    .header_item {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .header_item:last-child {
+        margin-bottom: 0;
+    }
+
+    .header_link {
+        font-size: 36px;
+        line-height: 48px;
+        margin-bottom: 30px;
+
+    }
+
+    .header_nav-close {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 11;
+    }
+
+    .header_nav-close-line {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        position: absolute;
+        top: 50%;
+
+    }
+
+    .header_nav-close-line:first-child {
+        transform: translateY(-50%) rotate(45deg);
+    }
+
+    .header_nav-close-line:last-child {
+        transform: translateY(-50%) rotate(-45deg);
+    }
+
+    .intro {
+        padding-top: 150px;
+    }
+
+    .intro_title {
+        font-size: 30px;
+        line-height: 48px;
+    }
+
+    .intro_subtitle {
+        font-size: 16px;
+    }
+
+    .search-form_field {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .search-form_submit {
+        width: 100%;
+    }
+
+    .benefits {
+        margin-bottom: 36px;
+    }
+
+    .benefits_card {
+        grid-column: span 3;
+        margin-bottom: 40px;
+    }
+
+
+    .benefits_card-pic {
+        margin-bottom: 0;
+    }
+
+
+    .header_link {
+        font-size: 24px;
+    }
+
+    .benefits_card-title {
+        margin-bottom: 12px;
+    }
+
+    .benefits_card-description {
+        margin-bottom: 20px;
+    }
+
+    .places {
+        margin-bottom: 76px;
+    }
+
+    .places_card-title {
+        font-size: 32px;
+    }
+
+    .tour_info {
+        grid-column: span 2;
+
+    }
+
+    .tour_pic {
+        margin-bottom: 12px;
+    }
+
+    .tour_pic,
+    .tours_info {
+        grid-column: span 2;
+    }
+
+    .tour_pic-mob_first {
+        grid-row-start: -1;
+    }
+
+    .tour_title {
+        margin-bottom: 30px;
+    }
+
+    .tour_desc {
+        margin-bottom: 30px;
+    }
+
+    .tours {
+        margin-bottom: 76px;
+    }
+
+    .top_card {
+        grid-column: span 6;
+
+    }
+
+    .top_card-desc {
+        margin-bottom: 15px;
+    }
+
+    .top_card-stats {
+        max-width: 386px;
+
+    }
+
+    .top {
+        margin-bottom: 50px;
+    }
+
+    .video_element {
+        padding-bottom: 20px;
+    }
+
+    .footer_logo {
+        padding-bottom: 15px;
+    }
+
+    .footer_menu-title {
+        font-size: 15px;
+    }
+
+    .footer_menu-link {
+        font-size: 12px;
+
+    }
+
+    .footer_nav {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+
+    .header_nav {
+        padding: 75px 30px;
+    }
+
+    .benefits_title {
+        padding: 75px 15px
+    }
+
+    .benefits_card-pic {
+        padding-bottom: 20px;
+    }
+
+
+}
+
+/* Media end */
