--- a/css/style.css
+++ b/css/style.css
@@ -1031,7 +1031,7 @@ img {
     display: grid;
     -ms-grid-columns: 1fr 108px 1fr;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0 108px;
+    column-gap: 0 108px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
